secondfile/objects/PRD__c.object
<CustomObject>
    <description>Promotion,Discounts and Rebates</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Off__c</fullName>
        <label>Amount Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Name__c</fullName>
        <label>Discount Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Plan_Level__c</fullName>
        <label>Discount Plan Level</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_QTY__c</fullName>
        <label>Discount QTY</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Off__c</fullName>
        <label>Percent Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOC_code__c</fullName>
        <label>SOC code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_For__c</fullName>
        <label>Valid For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PRD</label>
    <nameField>
        <label>PRD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>